@@ -23,10 +23,11 @@ else
   echo using libtoolize 
 fi
 
-aclocal 
+test -r aclocal.m4 || touch aclocal.m4
 glib-gettextize --force --copy
 test -r aclocal.m4 && chmod u+w aclocal.m4
 intltoolize --copy --force --automake
+aclocal 
 autoconf
 autoheader
 $LIBTOOLIZE --copy --force --automake
